--- a/css/test.css
+++ b/css/test.css
@@ -1,25 +1,133 @@
 div#rotator {
 	width: 450px;
-	height: 300px;
+	height: 268px;
 	border: 1px solid black;
 	background: #aaa;
-	text-align: center;
 	margin-left: auto;
     margin-right: auto;
 }
 
-div#rotatorElement {
+div.rotatorElement {
 	position: absolute;
+	-webkit-transition: opacity 1s ease-in-out;
+  	-moz-transition: opacity 1s ease-in-out;
+  	-o-transition: opacity 1s ease-in-out;
+  	transition: opacity 1s ease-in-out;
 }
 
-div#rotatorElement h4 {
+div.rotatorElement div.description {
+	width: 100%;
 	position: absolute;
-	top: 180px;
+	bottom: 0;
+	background-color: black;
+	word-wrap: normal;
 	text-align: center;
+	z-index: 200;
 }
 
-div#rotatorElement p {
-	position: absolute;
-	top: 200px;
-	text-align: center;
+div.rotatorElement div.description h4 {
+	padding-top: 0.2em;
+}
+
+div.rotatorElement div.description p {
+	padding-bottom: 0.5em;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+}
+
+
+
+
+
+#tabbedViewWrapper{
+	width:720px;
+	margin:40px auto 0;
+}
+
+#tabbedViewWrapper h1 {
+	color:#FFF;
+	text-align:center;
+	margin-bottom:20px;
+}
+
+#tabbedViewWrapper a {
+	display:block;
+	font-size:1.2em;
+	padding-top:20px;
+	color:#FFF;
+	text-decoration:none;
+	text-align:center;
+}
+
+#tabbedView {
+	display:block;
+	width:700px;
+	padding:15px;
+	background-color:#2e2e2e;
+	-moz-border-radius: 4px;
+	border-radius: 4px; 
+}
+
+#tabs {
+	height:30px;
+}
+
+#tabs > ul {
+	font-size: 1em;
+	list-style:none;
+}
+
+#tabs > ul > li {
+	margin:0 2px 0 0;
+	padding:7px 10px;
+	display:block;
+	float:left;
+	color:#FFF;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
+	-moz-border-radius-topleft: 4px;
+	-moz-border-radius-topright: 4px;
+	-moz-border-radius-bottomright: 0px;
+	-moz-border-radius-bottomleft: 0px;
+	border-top-left-radius:4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px; 
+	background: #808080; /* old browsers */
+	background: -moz-linear-gradient(top, #808080 0%, #808080 100%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#808080), color-stop(100%,#808080)); /* webkit */
+}
+
+#tabs > ul > li:hover {
+	background: #808080; /* old browsers */
+	background: -moz-linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(10%,#F3F3F3), color-stop(50%,#F3F3F3), color-stop(100%,#FFFFFF)); /* webkit */
+	cursor:pointer;
+	color: #333;
+}
+
+#tabs > ul > li.activeTab {
+	background: #808080; /* old browsers */
+	background: -moz-linear-gradient(top, #FFFFFF 0%, #F3F3F3 10%, #F3F3F3 50%, #FFFFFF 100%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(10%,#F3F3F3), color-stop(50%,#F3F3F3), color-stop(100%,#FFFFFF)); /* webkit */
+	cursor:pointer;
+	color: #333;
+}
+
+#tabbedContent {
+	-moz-border-radius-topleft: 0px;
+	-moz-border-radius-topright: 4px;
+	-moz-border-radius-bottomright: 4px;
+	-moz-border-radius-bottomleft: 4px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border-bottom-left-radius: 4px; 
+	padding:10px 10px 25px;
+	background: #FFFFFF; /* old browsers */
+	background: -moz-linear-gradient(top, #FFFFFF 0%, #FFFFFF 90%, #e4e9ed 100%); /* firefox */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(90%,#FFFFFF), color-stop(100%,#e4e9ed)); /* webkit */
+	margin:0;
+	color:#333;
 }
